k8s/cluster-app/otel-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-agent
  template:
    metadata:
      labels:
        app: otel-agent
    spec:
      containers:
      - name: otel-agent
        image: otel/opentelemetry-collector-contrib:0.98.0
        command:
          - "/otelcol-contrib"
          - "--config=/conf/config.yaml"
        volumeMounts:
        - name: config-vol
          mountPath: /conf
      volumes:
      - name: config-vol
        configMap:
          name: otel-agent-config
